# dictdot

./: .gitignore  LICENSE  README.md  pyproject.toml
dictdot/: __init__.py  dict_dot.py
dotdict/: __init__.py
tests/: test_dict_dot.py
