[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dotdict"
version = "0.1.0"
description = "A Python library that provides dot-notation access to dictionary attributes"
readme = "README.md"
authors = [
    {name = "Ulrik Stridsman", email = "ulrik.stridsman@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.0"
dependencies = []

[project.urls]
Homepage = "https://github.com/ulrikforsgren/dotdict"

[tool.setuptools]
packages = ["dotdict"]
