[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dictdot"
version = "0.1.3"
description = "A Python library that provides dot-notation access to dictionary attributes with safe handling of non-existent keys"
readme = "README.md"
authors = [
    {name = "Ulrik Stridsman", email = "ulrik.stridsman@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/ulrikforsgren/dictdot"
Documentation = "https://github.com/ulrikforsgren/dictdot#readme"
Changelog = "https://github.com/ulrikforsgren/dictdot/releases"
Issues = "https://github.com/ulrikforsgren/dictdot/issues"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "coverage>=5.0",
]
dev = [
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[tool.setuptools]
packages = ["dictdot"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=dictdot --cov-report=term-missing"

[tool.coverage.run]
source = ["dictdot"]
omit = ["*/tests/*"]
